[gd_scene load_steps=24 format=3 uid="uid://6yr24cgg6tn5"]

[ext_resource type="Texture2D" uid="uid://cpy3oy0h6llto" path="res://sprites/Tiles/Tile Pieces/brickstrdoor.png" id="1_dvynh"]
[ext_resource type="Script" path="res://scripts/str_door.gd" id="2_j3gvx"]
[ext_resource type="Texture2D" uid="uid://bneejg2h3bmqg" path="res://sprites/Tiles/Tile Pieces/tempBow.png" id="3_1yov8"]
[ext_resource type="Texture2D" uid="uid://cg6hokrfaw2ih" path="res://sprites/Tiles/Tile Pieces/smokeParticle.png" id="3_qldov"]
[ext_resource type="PackedScene" uid="uid://b056kdeqmturq" path="res://scenes/cash_spawner.tscn" id="3_tdgn7"]
[ext_resource type="Texture2D" uid="uid://m1n6nhhll01x" path="res://sprites/Tiles/Tile Pieces/smokeParticle2.png" id="4_wuwls"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i455g"]
atlas = ExtResource("1_dvynh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n2my"]
atlas = ExtResource("1_dvynh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_27rnt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i455g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n2my")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_2jshy"]
offsets = PackedFloat32Array(0.515663, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_py6km"]
gradient = SubResource("Gradient_2jshy")

[sub_resource type="Curve" id="Curve_c3kha"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.749436, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_t3hit"]
curve = SubResource("Curve_c3kha")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_413fc"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(3, 4, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_max = 16.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 0.25
scale_curve = SubResource("CurveTexture_t3hit")
color_ramp = SubResource("GradientTexture1D_py6km")
hue_variation_min = -2.23517e-08
hue_variation_max = -2.23517e-08

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sdxxm"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(3, 4, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_max = 6.83
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 0.25
scale_curve = SubResource("CurveTexture_t3hit")
color_ramp = SubResource("GradientTexture1D_py6km")
hue_variation_min = -2.23517e-08
hue_variation_max = -2.23517e-08

[sub_resource type="AtlasTexture" id="AtlasTexture_2yexc"]
atlas = ExtResource("3_1yov8")
region = Rect2(0, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_86e4g"]
atlas = ExtResource("3_1yov8")
region = Rect2(9, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1yh8"]
atlas = ExtResource("3_1yov8")
region = Rect2(18, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq7mo"]
atlas = ExtResource("3_1yov8")
region = Rect2(27, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwrsi"]
atlas = ExtResource("3_1yov8")
region = Rect2(36, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykgrb"]
atlas = ExtResource("3_1yov8")
region = Rect2(45, 0, 9, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_v3mvp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yexc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86e4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1yh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq7mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwrsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykgrb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5p54"]
size = Vector2(10, 4)

[node name="strDoor" type="AnimatedSprite2D" groups=["door"]]
y_sort_enabled = true
position = Vector2(0, 8)
sprite_frames = SubResource("SpriteFrames_27rnt")
offset = Vector2(0, -8)
script = ExtResource("2_j3gvx")

[node name="closeParticles" type="GPUParticles2D" parent="."]
z_index = 2
position = Vector2(0, -5)
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_413fc")
texture = ExtResource("3_qldov")
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="closeParticles2" type="GPUParticles2D" parent="."]
z_index = 2
position = Vector2(0, -5)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_sdxxm")
texture = ExtResource("4_wuwls")
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="Ribbon" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(0, -10)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_v3mvp")

[node name="cashSpawner" parent="." instance=ExtResource("3_tdgn7")]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
y_sort_enabled = true
shape = SubResource("RectangleShape2D_q5p54")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
